@startuml
' Purpose: Patient journey lifecycle and phase progression
' Source of truth:
'   src/api/schemas/journey.ts
'   src/api/service/patientJourneys.ts
'   src/api/service/journeyDates.ts

title Patient Journey Lifecycle - State Diagram

state ACTIVE
state SUSPENDED
state COMPLETED

[*] --> ACTIVE : assignPatientJourney\n(pausedAt=null, totalPausedDays=0)

ACTIVE --> SUSPENDED : pauseJourney\n(records pausedAt=now())
SUSPENDED --> ACTIVE : resumeJourney\n(totalPausedDays += elapsedDays,\npausedAt=null)
ACTIVE --> COMPLETED : complete
SUSPENDED --> COMPLETED : complete

note right of SUSPENDED
  Step dates shift dynamically by
  totalPausedDays + currentPauseDays
  (calculated in getEffectiveSteps;
  no store write until resumeJourney)
end note

note right of ACTIVE
  pauseJourney / resumeJourney in
  src/api/service/patientJourneys.ts
end note

note bottom of ACTIVE
  Phase progression is handled by
  startNextPhase(...): previous journey
  becomes COMPLETED and a new
  journey is created in the same episode.
end note

@enduml
